--- a/app.css
+++ b/app.css
@@ -9,3 +9,9 @@
     height: 500px;
     background-color: lightgreen;
 }
+
+#player{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+}
