disable image smoothing, split app.js into engine.js and game.js

--- a/app.css
+++ b/app.css
@@ -22,7 +22,12 @@
     width: 1000px;
     height: 500px;
     background-color: lightgreen;
-} */
+}
+*/
 .hidden {
     display: none;
+}
+
+canvas {
+    image-rendering: pixelated;
 }
