--- a/app.css
+++ b/app.css
@@ -3,6 +3,7 @@
     font-size: 200px;
 }
 
+
 /* #player{
     width: 50px;
     height: 50px;
@@ -29,6 +30,8 @@
 }
 
 canvas {
-    image-rendering: pixelated;
     background-color: lightgreen;
+    image-rendering: pixelated;
+    border-radius: 3px;
+    border-color: black;
 }
